--- a/website/css/header.css
+++ b/website/css/header.css
@@ -1,13 +1,7 @@
 header {
-  background-color: #00A79D;
-  height: 560px;
   color: #fff;
   text-align: center;
-  background: url(../images/header-block-left.png) top left no-repeat,
-              url(../images/header-block-right.png) top right no-repeat,
-              #00A79D;
 }
-
 header:after {
   content: '';
   width: 0;
@@ -15,13 +9,12 @@ header:after {
   border-left: 120px solid transparent;
   border-right: 120px solid transparent;
   border-top: 120px solid #00A79D;
-  position: absolute;
-  top: 559px;
-  left: 50%;
-  margin-left: -120px;
+  position: relative;
+  bottom: -105px;
+  z-index: -2;
 }
 
-header h1:before {
+header .logo {
   content: 'TR';
   border-radius: 50%;
   width: 63px;
@@ -34,9 +27,9 @@ header h1:before {
   display: inline-block;
   line-height: 63px;
   position: absolute;
-  top: 201.5px;
   left: 50%;
   margin: -31.5px;
+  margin-top: 0;
 }
 
 header h1 {
@@ -45,7 +38,7 @@ header h1 {
   font-weight: 400;
   text-transform: uppercase;
   line-height: 55px;
-  padding-top: 272px;
+  margin-top: 100px;
 }
 
 header h2 {
@@ -54,3 +47,134 @@ header h2 {
   margin: 10px;
 }
 
+.animatedBlocks .block-container {
+  width: 100%;
+  background-color: #00a79d;
+  display:inline-block;
+}
+
+.animatedBlocks .block-container div {
+  background-color: #FFF;
+  opacity: 0;
+  display: block;
+  float: right;
+  width: 6.25%;
+  padding-bottom: 6.25%;
+}
+
+.animatedBlocks .content {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  width: 600px;
+  left: 50%;
+  margin-left: -300px;
+  margin-top: 18%;
+}
+
+@-webkit-keyframes animate-opacity {
+  0%,40%   { opacity: 0; }
+  20% { opacity: 0.35; }
+}
+@-moz-keyframes animate-opacity {
+  0%,100%   { opacity: 0; }
+  50% { opacity: 0.35; }
+}
+@-o-keyframes animate-opacity {
+  0%,100%   { opacity: 0; }
+  50% { opacity: 0.35; }
+}
+@keyframes animate-opacity {
+  0%,50%   { opacity: 0; }
+  25% { opacity: 0.35; }
+}
+
+
+@media all and (min-width: 1300px) {
+  header .logo {
+    width: 100px;
+    height: 100px;
+    font-size: 50px;
+    line-height: 100px;
+    margin: -50px;
+  }
+  .animatedBlocks .content {
+    width: 850px;
+    margin-left: -425px;
+  }
+  header h1{
+    margin: 0;
+    font-size: 75px;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 105px;
+    margin-top: 100px;
+  }
+  header h2{
+    font-size: 38px;
+    line-height: 51px;
+    margin-top: 23px;
+  }
+}
+
+@media only screen and (max-device-width: 750px), only screen and (max-width: 750px){
+  header h1 {
+    font-size: 28px;
+    line-height: 40px;
+    margin-top:69px;
+  }
+  header h2 {
+    font-size: 15px;
+    line-height: 23px;
+    margin-top: 0px;
+  }
+}
+@media only screen and (max-device-width: 500px), only screen and (max-width: 500px){
+.animatedBlocks .content {
+    width: 316px;
+    margin-left: -156px;
+    margin-top: 15%;
+}
+ header .logo{
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin: -20px;
+  margin-top:0;
+ }
+  header h1 {
+    margin-top:40px;
+    font-size: 23px;
+  }
+
+  header:after {
+    border-left: 90px solid transparent;
+    border-right: 90px solid transparent;
+    border-top: 90px solid #00A79D;
+    bottom: -76px;
+  }
+}
+@media only screen and (max-device-width: 360px), only screen and (max-width: 360px){
+  .animatedBlocks .content {
+    width: 280px;
+    margin-left: -140px;
+  }
+
+  header h1 {
+    margin-top:42px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  header h2 {
+    font-size:13px;
+    line-height: 20px;
+  }
+}
+/*
+@media only screen and (max-device-width: 800px), only screen and (max-width: 800px){
+   .animatedBlocks .block-container div {
+    width: 12.50%;
+    padding: 12.50% 0 0 0;
+  }
+}*/
