--- a/website/css/header.css
+++ b/website/css/header.css
@@ -47,13 +47,13 @@ header h2 {
   margin: 10px;
 }
 
-.animatedBlocks .block-container {
+.animated-blocks #block-container {
   width: 100%;
   background-color: #00a79d;
   display:inline-block;
 }
 
-.animatedBlocks .block-container div {
+.animated-blocks #block-container div {
   background-color: #FFF;
   opacity: 0;
   display: block;
@@ -62,7 +62,7 @@ header h2 {
   padding-bottom: 6.25%;
 }
 
-.animatedBlocks .content {
+.animated-blocks .content {
   text-align: center;
   position: absolute;
   top: 0;
@@ -98,11 +98,11 @@ header h2 {
     line-height: 100px;
     margin: -50px;
   }
-  .animatedBlocks .content {
+  .animated-blocks .content {
     width: 850px;
     margin-left: -425px;
   }
-  header h1{
+  header h1 {
     margin: 0;
     font-size: 75px;
     font-weight: 400;
@@ -110,41 +110,42 @@ header h2 {
     line-height: 105px;
     margin-top: 100px;
   }
-  header h2{
+  header h2 {
     font-size: 38px;
     line-height: 51px;
     margin-top: 23px;
   }
 }
 
-@media only screen and (max-device-width: 750px), only screen and (max-width: 750px){
+@media only screen and (max-device-width: 750px), only screen and (max-width: 750px) {
   header h1 {
     font-size: 28px;
     line-height: 40px;
-    margin-top:69px;
+    margin-top: 69px;
   }
   header h2 {
     font-size: 15px;
     line-height: 23px;
-    margin-top: 0px;
+    margin-top: 0;
   }
 }
-@media only screen and (max-device-width: 500px), only screen and (max-width: 500px){
-.animatedBlocks .content {
+
+@media only screen and (max-device-width: 500px), only screen and (max-width: 500px) {
+  .animated-blocks .content {
     width: 316px;
     margin-left: -156px;
     margin-top: 15%;
-}
- header .logo{
-  font-size:24px;
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin: -20px;
-  margin-top:0;
- }
+  }
+  header .logo {
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin: -20px;
+    margin-top: 0;
+  }
   header h1 {
-    margin-top:40px;
+    margin-top: 40px;
     font-size: 23px;
   }
 
@@ -155,26 +156,20 @@ header h2 {
     bottom: -76px;
   }
 }
-@media only screen and (max-device-width: 360px), only screen and (max-width: 360px){
-  .animatedBlocks .content {
+
+@media only screen and (max-device-width: 360px), only screen and (max-width: 360px) {
+  .animated-blocks .content {
     width: 280px;
     margin-left: -140px;
   }
 
   header h1 {
-    margin-top:42px;
+    margin-top: 42px;
     font-size: 20px;
     line-height: 30px;
   }
   header h2 {
-    font-size:13px;
+    font-size: 13px;
     line-height: 20px;
   }
 }
-/*
-@media only screen and (max-device-width: 800px), only screen and (max-width: 800px){
-   .animatedBlocks .block-container div {
-    width: 12.50%;
-    padding: 12.50% 0 0 0;
-  }
-}*/
